[gd_scene load_steps=11 format=2]

[ext_resource path="res://Scenes/Minigames/Guitar/guitar_minigame.gd" type="Script" id=1]
[ext_resource path="res://Assets/Textures/Guitar/guitar_bg.png" type="Texture" id=2]
[ext_resource path="res://Assets/Themes/main.tres" type="Theme" id=3]
[ext_resource path="res://Scenes/Minigames/Guitar/string.tscn" type="PackedScene" id=4]
[ext_resource path="res://Assets/Textures/UI/Fishing3Minigame/fade.png" type="Texture" id=5]
[ext_resource path="res://Scenes/Singletons/Tooltips/tooltip_node.gd" type="Script" id=6]
[ext_resource path="res://Scenes/Minigames/Guitar/capo_button.tscn" type="PackedScene" id=7]
[ext_resource path="res://Assets/Textures/Guitar/hole.png" type="Texture" id=8]

[sub_resource type="Animation" id=1]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("fret_main:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -1920, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("ColorRect:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -1920, 0 ) ]
}
tracks/2/type = "bezier"
tracks/2/path = NodePath("ColorRect:rect_position:x")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( -1920, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/3/type = "bezier"
tracks/3/path = NodePath("ColorRect:rect_position:y")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/4/type = "bezier"
tracks/4/path = NodePath("fret_main:rect_position:x")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"points": PoolRealArray( -1920, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/5/type = "bezier"
tracks/5/path = NodePath("fret_main:rect_position:y")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}

[sub_resource type="Animation" id=2]
resource_name = "intro"
tracks/0/type = "bezier"
tracks/0/path = NodePath("ColorRect:rect_position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( -1920, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.5 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("ColorRect:rect_position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.5 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath("fret_main:rect_position:x")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( -1920, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.5 )
}
tracks/3/type = "bezier"
tracks/3/path = NodePath("fret_main:rect_position:y")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.5 )
}

[node name="guitar" type="CanvasLayer"]
layer = 15
script = ExtResource( 1 )

[node name="ColorRect" type="TextureRect" parent="."]
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -1920.0
margin_right = -1920.0
mouse_filter = 2
texture = ExtResource( 5 )
expand = true

[node name="fret_main" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -1920.0
margin_right = -1920.0
theme = ExtResource( 3 )

[node name="bg" type="TextureRect" parent="fret_main"]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 2 )
expand = true

[node name="neck" type="VBoxContainer" parent="fret_main"]
anchor_left = 0.172396
anchor_top = 0.0675926
anchor_right = 0.274
anchor_bottom = 0.975148
margin_right = -0.0800171
margin_bottom = -0.160004
__meta__ = {
"_edit_use_anchors_": true
}

[node name="capos" type="VBoxContainer" parent="fret_main"]
anchor_left = 0.279479
anchor_top = 0.071
anchor_right = 0.293479
anchor_bottom = 0.963
margin_right = -0.0800171
margin_bottom = -0.160004
custom_constants/separation = 20
__meta__ = {
"_edit_use_anchors_": true
}

[node name="capo_button" parent="fret_main/capos" instance=ExtResource( 7 )]
margin_right = 26.0
margin_bottom = 41.0

[node name="capo_button2" parent="fret_main/capos" instance=ExtResource( 7 )]
margin_top = 61.0
margin_right = 26.0
margin_bottom = 102.0

[node name="capo_button3" parent="fret_main/capos" instance=ExtResource( 7 )]
margin_top = 122.0
margin_right = 26.0
margin_bottom = 164.0

[node name="capo_button4" parent="fret_main/capos" instance=ExtResource( 7 )]
margin_top = 184.0
margin_right = 26.0
margin_bottom = 225.0

[node name="capo_button5" parent="fret_main/capos" instance=ExtResource( 7 )]
margin_top = 245.0
margin_right = 26.0
margin_bottom = 287.0

[node name="capo_button6" parent="fret_main/capos" instance=ExtResource( 7 )]
margin_top = 307.0
margin_right = 26.0
margin_bottom = 348.0

[node name="capo_button7" parent="fret_main/capos" instance=ExtResource( 7 )]
margin_top = 368.0
margin_right = 26.0
margin_bottom = 410.0

[node name="capo_button8" parent="fret_main/capos" instance=ExtResource( 7 )]
margin_top = 430.0
margin_right = 26.0
margin_bottom = 471.0

[node name="capo_button9" parent="fret_main/capos" instance=ExtResource( 7 )]
margin_top = 491.0
margin_right = 26.0
margin_bottom = 532.0

[node name="capo_button10" parent="fret_main/capos" instance=ExtResource( 7 )]
margin_top = 552.0
margin_right = 26.0
margin_bottom = 594.0

[node name="capo_button11" parent="fret_main/capos" instance=ExtResource( 7 )]
margin_top = 614.0
margin_right = 26.0
margin_bottom = 655.0

[node name="capo_button12" parent="fret_main/capos" instance=ExtResource( 7 )]
margin_top = 675.0
margin_right = 26.0
margin_bottom = 717.0

[node name="capo_button13" parent="fret_main/capos" instance=ExtResource( 7 )]
margin_top = 737.0
margin_right = 26.0
margin_bottom = 778.0

[node name="capo_button14" parent="fret_main/capos" instance=ExtResource( 7 )]
margin_top = 798.0
margin_right = 26.0
margin_bottom = 840.0

[node name="capo_button15" parent="fret_main/capos" instance=ExtResource( 7 )]
margin_top = 860.0
margin_right = 26.0
margin_bottom = 901.0

[node name="capo_button16" parent="fret_main/capos" instance=ExtResource( 7 )]
margin_top = 921.0
margin_right = 26.0
margin_bottom = 963.0

[node name="Panel" type="Panel" parent="fret_main"]
anchor_left = 0.027
anchor_top = 0.151
anchor_right = 0.147
anchor_bottom = 0.337
margin_left = -12.0
margin_top = -36.0
margin_right = 12.0
margin_bottom = 28.0

[node name="TooltipNode" type="Control" parent="fret_main/Panel"]
anchor_right = 1.0
anchor_bottom = 0.128
script = ExtResource( 6 )
header = "Custom Chord Shapes"
body = "Pressing a number key swaps between chord shapes! Holding SPRINT while changing shapes HAMMERS on notes."

[node name="shapes" type="GridContainer" parent="fret_main"]
anchor_left = 0.0275
anchor_top = 0.150556
anchor_right = 0.1475
anchor_bottom = 0.769556
margin_right = -0.320004
margin_bottom = 0.0400009
custom_constants/vseparation = 12
custom_constants/hseparation = 12
columns = 3
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Button" type="Button" parent="fret_main/shapes"]
margin_right = 69.0
margin_bottom = 64.0
rect_min_size = Vector2( 0, 64 )
size_flags_horizontal = 3

[node name="Button2" type="Button" parent="fret_main/shapes"]
margin_left = 81.0
margin_right = 150.0
margin_bottom = 64.0
rect_min_size = Vector2( 0, 64 )
size_flags_horizontal = 3

[node name="Button3" type="Button" parent="fret_main/shapes"]
margin_left = 162.0
margin_right = 230.0
margin_bottom = 64.0
rect_min_size = Vector2( 0, 64 )
size_flags_horizontal = 3

[node name="Button4" type="Button" parent="fret_main/shapes"]
margin_top = 76.0
margin_right = 69.0
margin_bottom = 140.0
rect_min_size = Vector2( 0, 64 )
size_flags_horizontal = 3

[node name="Button5" type="Button" parent="fret_main/shapes"]
margin_left = 81.0
margin_top = 76.0
margin_right = 150.0
margin_bottom = 140.0
rect_min_size = Vector2( 0, 64 )
size_flags_horizontal = 3

[node name="Button6" type="Button" parent="fret_main/shapes"]
margin_left = 162.0
margin_top = 76.0
margin_right = 230.0
margin_bottom = 140.0
rect_min_size = Vector2( 0, 64 )
size_flags_horizontal = 3

[node name="Button7" type="Button" parent="fret_main/shapes"]
margin_top = 152.0
margin_right = 69.0
margin_bottom = 216.0
rect_min_size = Vector2( 0, 64 )
size_flags_horizontal = 3

[node name="Button8" type="Button" parent="fret_main/shapes"]
margin_left = 81.0
margin_top = 152.0
margin_right = 150.0
margin_bottom = 216.0
rect_min_size = Vector2( 0, 64 )
size_flags_horizontal = 3

[node name="Button9" type="Button" parent="fret_main/shapes"]
margin_left = 162.0
margin_top = 152.0
margin_right = 230.0
margin_bottom = 216.0
rect_min_size = Vector2( 0, 64 )
size_flags_horizontal = 3

[node name="Label" type="Label" parent="fret_main"]
anchor_left = 0.0275
anchor_top = 0.120556
anchor_right = 0.1475
anchor_bottom = 0.177556
margin_right = -0.320004
margin_bottom = -19.48
text = "Saved Chord Shapes"
__meta__ = {
"_edit_use_anchors_": true
}

[node name="strings_main" type="Control" parent="."]
anchor_left = 0.75
anchor_top = 0.25
anchor_right = 0.9
anchor_bottom = 0.75
margin_left = 0.23999
margin_top = 0.320007
margin_right = -0.120117
margin_bottom = 0.159973
theme = ExtResource( 3 )

[node name="TextureRect" type="TextureRect" parent="strings_main"]
modulate = Color( 1, 1, 1, 0.235294 )
anchor_left = -0.2
anchor_right = 1.2
anchor_bottom = 1.0
texture = ExtResource( 8 )
expand = true
stretch_mode = 6

[node name="strings" type="HBoxContainer" parent="strings_main"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/separation = 18
alignment = 1

[node name="string" parent="strings_main/strings" instance=ExtResource( 4 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 2.0
margin_right = 34.0
margin_bottom = 539.0
height = 0.08
height_bot = 0.92

[node name="string2" parent="strings_main/strings" instance=ExtResource( 4 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 52.0
margin_right = 84.0
margin_bottom = 539.0
height = 0.03
height_bot = 0.97

[node name="string3" parent="strings_main/strings" instance=ExtResource( 4 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 102.0
margin_right = 134.0
margin_bottom = 539.0

[node name="string4" parent="strings_main/strings" instance=ExtResource( 4 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 152.0
margin_right = 184.0
margin_bottom = 539.0

[node name="string5" parent="strings_main/strings" instance=ExtResource( 4 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 202.0
margin_right = 234.0
margin_bottom = 539.0
height = 0.03
height_bot = 0.97

[node name="string6" parent="strings_main/strings" instance=ExtResource( 4 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 252.0
margin_right = 284.0
margin_bottom = 539.0
height = 0.08
height_bot = 0.92

[node name="Button" type="Button" parent="."]
anchor_left = 0.9
anchor_top = 0.92
anchor_right = 0.985
anchor_bottom = 0.98
margin_left = 0.399902
margin_top = -0.519958
margin_right = 0.799805
margin_bottom = -0.52002
theme = ExtResource( 3 )
text = "Exit"
__meta__ = {
"_edit_use_anchors_": true
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 1 )
anims/intro = SubResource( 2 )

[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
